# risc0-kzg

./: Cargo.toml
src/: main.rs  trusted_setup.rs
